@@ -1,8 +1,12 @@
 <pre>
 2008-05-14:
     * version 1.1
+    * try to add .exe automatically to filenames on windows, so :set editor=gvim -f
+      will automatically invoke gvim.exe (if it's in the path). Thanks to
+      Guido Van Hoecke
     * readded visualbellstyle (thanks mauke)
     * new popups=4 option
+    * many bug fixes as usual
 
 2008-05-14:
     * version 1.0
